<resources>
    <string name="app_name">The Commerce Junction</string>
    <!-- Login Activity -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="register_new">Don\'t have an account? <font color="#e53935">Sign up</font></string>
    <!-- Registration Activity -->
    <string name="registration_head_tv">Create an Account</string>
    <string name="registration_name_editText">Name</string>
    <string name="registration_email_editText">Email-id</string>
    <string name="registration_contact_editText">Contact Number</string>
    <string name="registration_password_editText">Password</string>
    <string name="registration_confirmPassword_editText">Confirm Password</string>
    <string name="registration_registerButton">Register</string>
    <string name="registration_signin">Already have an account ? <font color="#e53935">Sign in</font></string>
    <!-- Forgot Password Activity -->
    <string name="forgotPassword_email_editText">\tEmail-id</string>
    <string name="forgotPassword_button_text">RESET PASSWORD</string>
    <string name="forgot_passwordPage_head1">Forgot Password?</string>
    <string name="forgot_passwordPage_head2">We just need your registered contact number</string>
    <!-- Board Activity -->
    <string name="board_title">Medium</string>
    <string name="boardTV_Gujarati">ગુજરાતી માધ્યમ</string>
    <string name="boardTV_English">English Medium</string>
    <string name="headTV_Standard">Standard</string>
    <string name="headTV_Primary">Primary</string>
    <string name="headTV_Secondary">Secondary</string>
    <string name="headTV_Higher_Secondary">Higher Secondary</string>
    <string name="class_1">Class 1</string>
    <string name="class_2">Class 2</string>
    <string name="class_3">Class 3</string>
    <string name="class_4">Class 4</string>
    <string name="class_5">Class 5</string>
    <string name="class_6">Class 6</string>
    <string name="class_7">Class 7</string>
    <string name="class_8">Class 8</string>
    <string name="class_9">Class 9</string>
    <string name="class_10">Class 10</string>
    <string name="class_11_comm">Class 11\nCommerce</string>
    <string name="class_11_arts">Class 11\nArts</string>
    <string name="class_11_sci">Class 11\nScience</string>
    <string name="class_12_comm">Class 12\nCommerce</string>
    <string name="class_12_arts">Class 12\nArts</string>
    <string name="class_12_sci">Class 12\nScience</string>
    <string name="title_activity_stdmain">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Drawer Strings -->
    <string name="close_drawer">Closing</string>
    <string name="open_drawer">Opening</string>

    <!-- Edit Profile-->
    <string name="head">Profile Details</string>
    <string name="username">Username</string>
    <string name="useremail">User Email-ID</string>
    <string name="usercontact">User Contact</string>

    <string name="no_standard_found">No Standards found!</string>
    <string name="no_chapters_found">No Chapters found!</string>
    <string name="no_notification_found">No Notifications found!</string>
    <string name="no_videos_found">No Videos found!</string>
    <string name="no_ebooks_found">No E-books found!</string>
    <string name="no_material_found">No Material found!</string>
    <string name="no_subject_found">No Subject found!</string>
    <!-- Chapters list -->
    <string name="headTV_Chapters">Chapter</string>
    <string name="chapter_1">Chapter 1</string>
    <string name="verification">Verification</string>
    <string name="we_have_sent_an_otp_on_your_mobile_number_to_verify_please_enter_your_verification_code">We have sent an OTP on your Mobile Number to verify, please enter your Verification Code.</string>
    <string name="resend">Resend</string>
    <string name="if_you_didn_t_receive_code">If you didn\'t receive code ?</string>
    <string name="verify">Verify</string>
    <string name="please_enter_your_new_password">Please enter your New Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
</resources>