<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context=".activity.ForgotpasswordActivity">

    <ImageView
        android:id="@+id/lockIV"
        android:layout_width="@dimen/forgotPage_IV_width"
        android:layout_height="@dimen/forgotPage_IV_height"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        app:srcCompat="@drawable/lockimage" />

    <TextView
        android:id="@+id/forgotPageHeadTV1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forgotPage_TV_margin_top"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textSize="@dimen/registration_head_tv_textSize"
        android:textStyle="bold"
        android:text="@string/forgot_passwordPage_head1" />
    <TextView
        android:id="@+id/forgotPageHeadTV2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forgotPage_TV_margin_top"
        android:layout_marginBottom="@dimen/forgotPage_TV_margin_bottom"
        android:gravity="center"
        android:textSize="@dimen/forgotPage_TV_textSize"
        android:textStyle="normal"
        android:text="@string/forgot_passwordPage_head2" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height"
        android:layout_marginTop="60dp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/card_margin_bottom1"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="@dimen/card_elevation">

        <EditText
            android:id="@+id/userPhoneIV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/edittextBackground"
            android:paddingStart="@dimen/_8sdp"
            android:hint="@string/registration_contact_editText"
            android:inputType="number" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardElevation="@dimen/card_elevation">

        <Button
            android:id="@+id/forgotButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/colorLoginPage"
            android:text="@string/forgotPassword_button_text"
            android:textColor="@color/buttonText"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</LinearLayout>