<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChangePasswordActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_30sdp"
        android:paddingVertical="@dimen/_35sdp">

        <ImageView
            android:id="@+id/lockIV"
            android:layout_width="@dimen/forgotPage_IV_width"
            android:layout_height="@dimen/forgotPage_IV_height"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/lockimage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/please_enter_your_new_password"
            android:textColor="#161616"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/newPassEdt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/edittextBackground"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_8sdp"
                android:textSize="@dimen/_13ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/confirmPassEdt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/edittextBackground"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_8sdp"
                android:textSize="@dimen/_13ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="@dimen/card_elevation">

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorLoginPage"
                android:text="@string/submit"
                android:textColor="@color/buttonText"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>


</LinearLayout>