<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.VerifyOtpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_30sdp">

        <ImageView
            android:id="@+id/lockIV"
            android:layout_width="@dimen/forgotPage_IV_width"
            android:layout_height="@dimen/forgotPage_IV_height"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/lockimage" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_30sdp"
            android:paddingTop="@dimen/_35sdp">

            <LinearLayout
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/verification"
                    android:textColor="#161616"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/we_have_sent_an_otp_on_your_mobile_number_to_verify_please_enter_your_verification_code"
                    android:textColor="#161616"
                    android:textSize="@dimen/_12ssp" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center">

            <in.aabhasjindal.otptextview.OtpTextView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:elevation="@dimen/_5sdp"
                android:textColor="@color/colorPrimary"
                app:height="40dp"
                app:width="40dp"
                app:bar_enabled="true"
                app:bar_height="2dp"
                app:length="6"
                app:bar_active_color="@color/colorPrimary"
                app:bar_inactive_color="@color/colorPrimary"
                app:otp_text_size="24dp"
                 />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="@dimen/card_elevation">

            <Button
                android:id="@+id/verifyButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorLoginPage"
                android:text="@string/verify"
                android:textColor="@color/buttonText"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/resendOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/if_you_didn_t_receive_code"
                android:textColor="#161616"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/resend"
                android:textColor="#EF660B"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>